fixed alignment of side main columns and the img size

--- a/adopt-a-dog/styles.css
+++ b/adopt-a-dog/styles.css
@@ -143,7 +143,7 @@ h1 {
 
 .main-img {
   padding: 10px;
-  width: 34%;
+  width: 60%;
   height: auto;
   margin: 5px;
   float: left;
@@ -218,14 +218,18 @@ h1 {
 /*Style Main Side*/
 
 .main-side {
-  margin: 0;
-  padding: 0;
+  display: flex;
+  width: 70%;
+  text-align: center;
+  flex-direction: column;
+  height: auto;
+  margin: 5px;
 }
 
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   padding: 0;
   margin: 0;
 }
@@ -233,9 +237,9 @@ h1 {
 .right-section {
   display: flex;
   flex-wrap: wrap;
-  align-content: space-around; 
+  /* align-content: space-around;  */
   flex-direction: column;
-  width: 50%;
+  width: 100%;
   margin: 0;
   padding: 0;
   padding-left: 0;
@@ -250,6 +254,7 @@ a:link {
   color: #008ECC;
   background-color: transparent;
   text-decoration: none;
+  font-size: .8rem;
 }
 a:visited {
   color: #008ECC;
@@ -261,7 +266,7 @@ a:visited {
   width: 100%;
   height: 8rem;
   overflow: hidden;
-  object-fit: contain;
+  object-fit: fill;
   margin: 4px 5px 5px 10px;
 
 }
@@ -273,7 +278,7 @@ a:visited {
 }
 
 .main-side h3 {
-  font-size: .8rem;
+  font-size: .9rem;
   text-align: left;
   margin: 4px 5px 5px 10px;
   color: #004466;
@@ -282,7 +287,7 @@ a:visited {
 }
 
 .main-side p {
-  font-size: .6em;
+  font-size: .8em;
   text-align: left;
   padding: 1px;
   margin: 4px 5px 5px 10px;
